resolved negative margin-right issue covering delete btn

--- a/scss/pages/_alerts.scss
+++ b/scss/pages/_alerts.scss
@@ -1,3 +1,7 @@
 .page-alerts {
   @extend .ui-page;
+
+  .widget-infinite-list .item.item-icon-right .item-content {
+    margin-right: 0;
+  }
 }
